--- a/package.json
+++ b/package.json
@@ -1,33 +1,61 @@
 {
   "private": true,
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --config webpack/server.js",
+    "server-dev": "node server/dev.js",
+    "server-prod": "node server/prod.js",
+    "build-dev": "webpack --config webpack/dev.js",
+    "build-prod": "webpack --config webpack/prod.js",
+    "clean": "rm -rf build webpack-assets.json webpack-stats.json"
   },
   "dependencies": {
+    "axios": "^0.9.1",
+    "babel-plugin-syntax-decorators": "^6.5.0",
     "babel-polyfill": "^6.7.2",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.7.2",
     "express": "^4.13.4",
+    "history": "^2.0.1",
+    "marked": "^0.3.5",
+    "node-uuid": "^1.4.7",
+    "postcss": "^5.0.19",
+    "postcss-modules": "^0.4.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-helmet": "^2.3.1",
+    "react-redux": "^4.4.1",
     "react-router": "^2.0.1",
+    "react-router-redux": "^4.0.0",
+    "redux": "^3.3.1",
+    "redux-form": "^4.2.2",
+    "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.0.1",
     "webpack-isomorphic-tools": "^2.2.31"
   },
   "devDependencies": {
+    "autoprefixer": "^6.3.4",
     "babel-core": "^6.7.2",
     "babel-loader": "^6.2.4",
     "browser-sync": "^2.11.1",
     "coffee-script": "^1.10.0",
+    "connect": "^3.4.1",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
     "gulp": "^3.9.1",
     "html-webpack-plugin": "^2.10.0",
     "isomorphic-style-loader": "0.0.12",
+    "memory-fs": "^0.3.0",
+    "node-sass": "^3.4.2",
+    "postcss-loader": "^0.8.2",
+    "postcss-simple-vars": "^1.2.0",
+    "precss": "^1.4.0",
+    "react-css-modules": "^3.7.5",
+    "sass-loader": "^3.2.0",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
-    "webpack-dev-middleware": "^1.5.1",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "webpack-hot-middleware": "^2.10.0"
   }
 }
